[Pramod] Added: install karma and jasmine testing

--- a/book_store_app/tsconfig.app.json
+++ b/book_store_app/tsconfig.app.json
@@ -9,6 +9,13 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "target": "es6",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true
   }
 }
