--- a/book_store_app/package.json
+++ b/book_store_app/package.json
@@ -8,6 +8,7 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
+    "test": "karma start karma.config.cjs",
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
@@ -19,16 +20,36 @@
     "vuetify": "^3.6.10"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.14.5",
+    "@types/jasmine": "^5.1.4",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.10",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
+    "jasmine-core": "^5.1.2",
+    "jest": "^29.7.0",
+    "karma": "^6.4.3",
+    "karma-browserify": "^8.1.0",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-cli": "^2.0.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-typescript": "^5.5.4",
     "npm-run-all2": "^6.2.0",
+    "ts-jest": "^29.2.0",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vue-cli-plugin-vuetify": "~2.5.8",
-    "vue-tsc": "^2.0.21"
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16",
+    "vue-tsc": "^2.0.21",
+    "vueify": "^9.4.1"
   }
 }
