--- a/book_store_app/package.json
+++ b/book_store_app/package.json
@@ -8,7 +8,6 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "test": "karma start karma.config.cjs",
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
@@ -41,8 +40,10 @@
     "karma-cli": "^2.0.0",
     "karma-jasmine": "^5.1.0",
     "karma-typescript": "^5.5.4",
+    "karma-webpack": "^5.0.1",
     "npm-run-all2": "^6.2.0",
     "ts-jest": "^29.2.0",
+    "ts-loader": "^9.5.1",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
